infrastructure/ingress/dev/patches/patch-fastapi-ingress-cdk.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:532673134317:certificate/905d0d16-87e8-4e89-a88c-b6053f472e81
    alb.ingress.kubernetes.io/security-groups: sg-0bfc1a752ce23a3fd
    external-dns.alpha.kubernetes.io/hostname: dev-fast-api.piercuta.com
  name: fastapi-ingress
  namespace: fastapi
spec:
  tls:
  - hosts:
    - dev-fast-api.piercuta.com
