infrastructure/ingress/dev/patches/patch-grafana-ingress-cdk.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:532673134317:certificate/905d0d16-87e8-4e89-a88c-b6053f472e81
    alb.ingress.kubernetes.io/security-groups: sg-063e6c3758480f98d
    external-dns.alpha.kubernetes.io/hostname: dev-grafana.piercuta.com
  name: grafana-ingress
  namespace: monitoring
spec:
  tls:
  - hosts:
    - dev-grafana.piercuta.com
